syntax = "proto3";

option go_package = "cros.local/bazel/ebuild/private/common/hostcontainercomms/host_service";

message ExecuteAsRootRequest {
  // Specifically don't bother with stdin, as we are only trying to support
  // primitives with this, not scripts, and I can't think of any primitives we
  // would want that use stdin. We can reconsider later if this changes.
  string name = 1;
  repeated string args = 2;
  string dir = 3;
}

message ExecuteAsRootResponse {
  int32 exit_code = 1;
  bytes stdout = 2;
  bytes stderr = 3;
}

service HostService {
  // ExecuteAsRoot executes a command as root inside a rootless container.
  // Specifically, the user namespace we create is actually more accurately
  // several different namespaces - user, mount, ipc, and network namespace.
  // This method uses "sudo nsenter" to enter every one of those except the user
  // one, and then executes the command.
  // This ensures both that the paths are correct (ie. /tmp/blah refers to the
  // /tmp/blah inside the container, not outside), and prevents some security
  // issues from potentially accessing things outside the namespace.
  rpc ExecuteAsRoot(ExecuteAsRootRequest) returns (ExecuteAsRootResponse);
}